# Tg-bot-for-levis

./: .env.example  .gitignore  README.md  codex_prompt_telegram_bot.md  pyproject.toml
app/: config.py  domain.py  logging_config.py  main.py
app/bot/: __init__.py  handlers.py  keyboards.py  router.py
app/integrations/: yookassa_client.py
app/services/: __init__.py  event_settings_service.py  payment_service.py
app/storage/: db.py  models.py  repositories.py
app/webhooks/: __init__.py  server.py  yookassa.py
tests/: test_bot_router.py  test_config.py  test_event_settings_service.py  test_payment_service.py  test_storage_repository.py
