[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-bot-for-levis"
version = "0.1.0"
description = "Telegram bot with YooKassa integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram==3.27.0",
  "aiohttp==3.13.5",
  "aiohttp-socks==0.10.1",
  "pydantic-settings==2.12.0",
  "SQLAlchemy==2.0.44",
  "aiosqlite==0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
